After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 551879 - gnome-panel crashes when clicking launcher on second screen
gnome-panel crashes when clicking launcher on second screen
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: panel
2.23.x
Other All
: Urgent critical
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks: randr-tracker
 
 
Reported: 2008-09-11 21:35 UTC by Andreas Moog
Modified: 2009-07-01 12:15 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24


Attachments
Set screen from launcher (490 bytes, patch)
2008-09-28 11:25 UTC, Gerd Kohlberger
none Details | Review

Description Andreas Moog 2008-09-11 21:35:53 UTC
Steps to reproduce:
Every time I click on a launcher on second screen's applet gnome-panel crashes
Using nvidia's propietary drivers without xinerama or twinview

Stack trace:

Thread 1 (process 22201)

  • #0 IA__g_logv
    at /build/buildd/glib2.0-2.17.6/glib/gmessages.c line 503
  • #1 IA__g_log
    at /build/buildd/glib2.0-2.17.6/glib/gmessages.c line 517
  • #2 ??
    from /usr/lib/libgdk-x11-2.0.so.0
  • #3 _XError
    at ../../src/XlibInt.c line 2912
  • #4 process_responses
    at ../../src/xcb_io.c line 138
  • #5 _XReply
    at ../../src/xcb_io.c line 370
  • #6 XGetWindowProperty
    at ../../src/GetProp.c line 64
  • #7 ??
    from /usr/lib/libgdk-x11-2.0.so.0
  • #8 gdk_window_set_decorations
    from /usr/lib/libgdk-x11-2.0.so.0
  • #9 ??
    from /usr/lib/libgtk-x11-2.0.so.0
  • #10 IA__g_closure_invoke
    at /build/buildd/glib2.0-2.17.6/gobject/gclosure.c line 767
  • #11 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 3174
  • #12 IA__g_signal_emit_valist
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 2977
  • #13 IA__g_signal_emit
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 3034
  • #14 gtk_widget_realize
    from /usr/lib/libgtk-x11-2.0.so.0
  • #15 xstuff_zoom_animate
    at xstuff.c line 450
  • #16 launcher_launch
    at launcher.c line 195
  • #17 IA__g_closure_invoke
    at /build/buildd/glib2.0-2.17.6/gobject/gclosure.c line 767
  • #18 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 3244
  • #19 IA__g_signal_emit_valist
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 2977
  • #20 IA__g_signal_emit
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 3034
  • #21 ??
    from /usr/lib/libgtk-x11-2.0.so.0
  • #22 IA__g_closure_invoke
    at /build/buildd/glib2.0-2.17.6/gobject/gclosure.c line 767
  • #23 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 3174
  • #24 IA__g_signal_emit_valist
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 2977
  • #25 IA__g_signal_emit
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 3034
  • #26 ??
    from /usr/lib/libgtk-x11-2.0.so.0
  • #27 ??
    from /usr/lib/libgtk-x11-2.0.so.0
  • #28 IA__g_closure_invoke
    at /build/buildd/glib2.0-2.17.6/gobject/gclosure.c line 767
  • #29 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 3282
  • #30 IA__g_signal_emit_valist
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 2987
  • #31 IA__g_signal_emit
    at /build/buildd/glib2.0-2.17.6/gobject/gsignal.c line 3034
  • #32 ??
    from /usr/lib/libgtk-x11-2.0.so.0
  • #33 gtk_propagate_event
    from /usr/lib/libgtk-x11-2.0.so.0
  • #34 gtk_main_do_event
    from /usr/lib/libgtk-x11-2.0.so.0
  • #35 ??
    from /usr/lib/libgdk-x11-2.0.so.0
  • #36 IA__g_main_context_dispatch
    at /build/buildd/glib2.0-2.17.6/glib/gmain.c line 2072
  • #37 g_main_context_iterate
    at /build/buildd/glib2.0-2.17.6/glib/gmain.c line 2705
  • #38 IA__g_main_loop_run
    at /build/buildd/glib2.0-2.17.6/glib/gmain.c line 2928
  • #39 gtk_main
    from /usr/lib/libgtk-x11-2.0.so.0
  • #40 main
    at main.c line 105

Other information:
This bug was reported on Launchpad:
https://bugs.edge.launchpad.net/ubuntu/+source/gnome-panel/+bug/256041
Comment 1 Gerd Kohlberger 2008-09-28 11:22:39 UTC
I just ran into the same problem. I think the crash happens because the launcher animation window is created with the default (wrong) screen.

Version: 2.24.0
Metacity compositor enabled.

Backtrace with --sync:

-----

  • #52 exit
    from /lib/tls/i686/cmov/libc.so.6
  • #53 gdk_x_error
    at /build/buildd/gtk+2.0-2.14.3/gdk/x11/gdkmain-x11.c line 645
  • #54 ??
    from /usr/lib/libbonoboui-2.so.0
  • #55 _XError
    at ../../src/XlibInt.c line 2912
  • #56 process_responses
    at ../../src/xcb_io.c line 138
  • #57 _XReply
    at ../../src/xcb_io.c line 370
  • #58 XSync
    at ../../src/Sync.c line 48
  • #59 _XSyncFunction
    at ../../src/Synchro.c line 37
  • #60 _XIDHandler
    at ../../src/xcb_io.c line 275
  • #61 XCreateWindow
    at ../../src/Window.c line 139
  • #62 _gdk_window_new
    at /build/buildd/gtk+2.0-2.14.3/gdk/x11/gdkwindow-x11.c line 895
  • #63 IA__gdk_window_new
    at /build/buildd/gtk+2.0-2.14.3/gdk/gdkwindow.c line 374
  • #64 gtk_window_realize
    at /build/buildd/gtk+2.0-2.14.3/gtk/gtkwindow.c line 4615
  • #65 IA__g_cclosure_marshal_VOID__VOID
    at /build/buildd/glib2.0-2.18.1/gobject/gmarshal.c line 77
  • #66 g_type_class_meta_marshal
    at /build/buildd/glib2.0-2.18.1/gobject/gclosure.c line 878
  • #67 IA__g_closure_invoke
    at /build/buildd/glib2.0-2.18.1/gobject/gclosure.c line 767
  • #68 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.18.1/gobject/gsignal.c line 3174
  • #69 IA__g_signal_emit_valist
    at /build/buildd/glib2.0-2.18.1/gobject/gsignal.c line 2977
  • #70 IA__g_signal_emit
    at /build/buildd/glib2.0-2.18.1/gobject/gsignal.c line 3034
  • #71 IA__gtk_widget_realize
    at /build/buildd/gtk+2.0-2.14.3/gtk/gtkwidget.c line 3319
  • #72 xstuff_zoom_animate
    at xstuff.c line 450
  • #73 launcher_launch
    at launcher.c line 195

Comment 2 Gerd Kohlberger 2008-09-28 11:25:16 UTC
Created attachment 119520 [details] [review]
Set screen from launcher

This patch fixes the bug for me.
Comment 3 ramon.bastiaans 2009-03-24 15:48:58 UTC
I still experience this issue with Gnome 2.26 in Ubuntu Jausty.

I also experienced this issue in Ubuntu Intrepid. In Ubuntu Hardy there was no problem, so I would assume this bug entered the source somewhere between the Hardy and Intrepid release.
Comment 4 Andreas Moog 2009-06-30 10:08:16 UTC
The patch from Gerd Kohlberger fixes the issue.
Comment 5 Vincent Untz 2009-07-01 12:15:05 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.