[panel] Fix crash when clicking launcher on second screen

The window used for the composited animation was not using the right
screen.

http://bugzilla.gnome.org/show_bug.cgi?id=551879